--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBQa5Y-zQAd2nBiGu_q6QUocXCOjUFP8ng</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">INSERT API KEY</string>
 </resources>
